# ProjectTemplate

./: .gitignore  CMakeLists.txt
3rdPartyLibs/UnitTest++/: CMakeLists.txt  TestReporterStdout.cpp
3rdPartyLibs/UnitTest++/src/: CMakeLists.txt
3rdPartyLibs/sndlib/: CMakeLists.txt  io.c  s7.c
MyProject/Tests/: Test_MyProject.cpp
MyProject/incl/: CombFilter.h  MyProject.h
MyProject/src/: CMakeLists.txt  MyProjectConfig.h.in
MyProject/src/JuceLibraryCode/: AppConfig.h.in  CMakeLists.txt  Info.plist.in  JuceHeader.h.in
MyProject/src/MyProject/: CMakeLists.txt  CombFilter.cpp  MyProject.cpp
MyProject/src/MyProjectCL/: CMakeLists.txt  ConvBlock.cpp  ConvBlock.h  MyProjectMain.cpp
MyProject/src/MyProjectGui/: CMakeLists.txt  Main.cpp
MyProject/src/MyProjectPlugin/: CMakeLists.txt
MyProject/src/Tests/: Test_AudioIO.cpp
MyProject/src/incl/: AudioFileIf.h
SharedSources/AudioFileIO/: AudioFileIf.cpp  CMakeLists.txt
SharedSources/Dsp/: CMakeLists.txt  ConvFir.cpp  ConvFir.h  Fft.cpp  Fft.h
SharedSources/TestCL/: CMakeLists.txt  Test.cpp
SharedSources/incl/: AudioFileIf.h  Dsp.h  InputBuffSrc.h  InputBuffSrcIf.h  RingBuffer.h  SignalGen.h  Util.h
Tests/: Test_AudioIO.cpp  Test_ConvFir.cpp  Test_Fft.cpp  Test_InputBuffSrc.cpp  Test_Lfo.cpp  Test_RingBuffer.cpp
bld/AudioFileIO/MyProject.build/Debug/AudioFileIO.build/: AudioFileIO~.dep
bld/AudioFileIO/sndlib/MyProject.build/Debug/sndlib.build/: sndlib~.dep
bld/Dsp/MyProject.build/Debug/Dsp.build/: Dsp~.dep
bld/JuceLibraryCode/MyProject.build/Debug/JuceLibraryCode.build/: JuceLibraryCode~.dep
bld/MyProject.build/Debug/ALL_BUILD.build/: Script-37FFF152711946AEA9D4D1F5.sh
bld/MyProject.build/Debug/RUN_TESTS.build/: Script-63BAF9A4687B4C39BAE87110.sh
bld/MyProject.build/Debug/ZERO_CHECK.build/: Script-79E674085DFC41CC9D17DCC0.sh
bld/MyProject/MyProject.build/Debug/MyProject.build/: MyProject~.dep
bld/MyProjectCL/MyProject.build/Debug/MyProjectCL.build/: MyProjectCL~.dep
bld/MyProjectGui/MyProject.build/Debug/MyProjectGui.build/: MyProjectGui~.dep
bld/MyProjectPlugin/MyProject.build/Debug/MyProjectPlugin.build/: MyProjectPlugin~.dep
bld/MyProjectPlugin/MyProject.build/Debug/MyProjectPlugin.build/Objects-normal/i386/: AUBuffer.d  AUCarbonViewBase.dia  AUCarbonViewControl.dia  AUCarbonViewDispatch.dia  AUDispatch.dia  AUInputElement.d  AUInputElement.dia  AUMIDIBase.dia  AUMIDIEffectBase.d  AUMIDIEffectBase.dia  AUOutputBase.d  AUOutputBase.dia  AUScopeElement.d  CAAudioChannelLayout.d  CAStreamBasicDescription.d  CAVectorUnit.d  CarbonEventHandler.dia  MusicDeviceBase.d  juce_AU_Wrapper.d  juce_AU_Wrapper.dia  juce_VST_Wrapper-1E787283BBB4A9C3.d
bld/MyProjectPlugin/MyProject.build/Debug/MyProjectPlugin.build/Objects-normal/x86_64/: AUBase.d  AUBase.dia  AUCarbonViewBase.d  AUCarbonViewBase.dia  AUCarbonViewControl.d  AUCarbonViewControl.dia  AUCarbonViewDispatch.d  AUDispatch.d  AUEffectBase.d  AUEffectBase.dia  AUMIDIBase.d  AUOutputElement.d  AUOutputElement.dia  AUScopeElement.dia  CAAUParameter.d  CAMutex.d  CarbonEventHandler.d  ComponentBase.d  ComponentBase.dia  MusicDeviceBase.dia  juce_AU_Wrapper.d  juce_AU_Wrapper.dia  juce_VST_Wrapper-DBFCC9FAAFE81985.d  juce_VST_Wrapper-DBFCC9FAAFE81985.dia
bld/TestCL/MyProject.build/Debug/TestCL.build/: TestCL~.dep
bld/TestCL/UnitTest++/MyProject.build/Debug/UnitTest++.build/: UnitTest++~.dep
bld/Testing/Temporary/: CTestCostData.txt
cmake.modules/: FindCppcheck.cmake  FindJuce.cmake  Findpthreads.cmake  compiler-options.cmake  oslibs.cmake  output.cmake  platform.cmake
